--- a/NAMESPACE
+++ b/NAMESPACE
@@ -124,6 +124,7 @@ importFrom(goalie,isFile)
 importFrom(goalie,isFlag)
 importFrom(goalie,isHeaderLevel)
 importFrom(goalie,isInt)
+importFrom(goalie,isNumber)
 importFrom(goalie,isScalar)
 importFrom(goalie,isScalarInteger)
 importFrom(goalie,isString)
