--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,9 @@
 
 export("collectionNames<-")
 export("contrastNames<-")
+export(FGSEAList)
 export(RankedList)
+export(acidgseaTestsURL)
 export(collectionNames)
 export(combine)
 export(contrastNames)
@@ -10,7 +12,6 @@ export(convertToHuman)
 export(enrichedGeneSets)
 export(export)
 export(pfgsea)
-export(pfgseaTestsURL)
 export(plotCounts)
 export(plotEnrichedGeneSets)
 export(plotEnrichedUpset)
