--- a/NAMESPACE
+++ b/NAMESPACE
@@ -139,6 +139,7 @@ importFrom(methods,new)
 importFrom(methods,setAs)
 importFrom(methods,setGeneric)
 importFrom(methods,setMethod)
+importFrom(methods,setValidity)
 importFrom(methods,show)
 importFrom(methods,slot)
 importFrom(methods,validObject)
