--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,8 +21,10 @@ environment:
     R_ARCH: x64
     USE_RTOOLS: true
   matrix:
-    - configuration: 3.6
-      R_VERSION: 3.6.1
+    - configuration: release
+      R_VERSION: release
+    - configuration: oldrel
+      R_VERSION: oldrel
 
 matrix:
   fast_finish: true
@@ -30,9 +32,6 @@ matrix:
 build_script:
   - travis-tool.sh install_bioc GenomeInfoDbData
   - travis-tool.sh install_bioc_deps
-
-before_test:
-  - R -f "msigdb.R"
 
 test_script:
   - travis-tool.sh run_tests
