Make `FGSEAList` object oriented

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ exportClasses(FGSEAList)
 exportClasses(RankedList)
 exportMethods("collectionNames<-")
 exportMethods("contrastNames<-")
+exportMethods(FGSEAList)
 exportMethods(RankedList)
 exportMethods(collectionNames)
 exportMethods(combine)
