--- a/NAMESPACE
+++ b/NAMESPACE
@@ -80,6 +80,7 @@ importFrom(acidgenerics,topTables)
 importFrom(acidplots,acid_theme_light)
 importFrom(acidplots,plotUpset)
 importFrom(basejump,Gene2Symbol)
+importFrom(basejump,aggregateRows)
 importFrom(basejump,alphaThreshold)
 importFrom(basejump,as_tibble)
 importFrom(basejump,export)
