Improve gene set plot looping

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(plotEnrichedGeneSets)
 export(plotEnrichedUpset)
 export(plotEnrichment)
 export(plotGSEATable)
+export(plotGeneSet)
 export(plotHeatmap)
 export(topTables)
 export(updateObject)
@@ -35,6 +36,7 @@ exportMethods(export)
 exportMethods(plotCounts)
 exportMethods(plotEnrichedGeneSets)
 exportMethods(plotEnrichedUpset)
+exportMethods(plotGeneSet)
 exportMethods(plotHeatmap)
 exportMethods(show)
 exportMethods(topTables)
