Improve plotGeneSet to support custom colors

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -104,14 +104,23 @@ importFrom(cli,cli_alert_warning)
 importFrom(cli,cli_dl)
 importFrom(cli,cli_text)
 importFrom(cli,cli_ul)
+importFrom(fgsea,calcGseaStat)
 importFrom(fgsea,fgsea)
 importFrom(fgsea,gmtPathways)
-importFrom(fgsea,plotEnrichment)
 importFrom(fgsea,plotGseaTable)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,element_blank)
+importFrom(ggplot2,geom_hline)
+importFrom(ggplot2,geom_line)
+importFrom(ggplot2,geom_point)
+importFrom(ggplot2,geom_segment)
+importFrom(ggplot2,ggplot)
 importFrom(ggplot2,labs)
+importFrom(ggplot2,theme)
 importFrom(goalie,allAreAtomic)
 importFrom(goalie,areDisjointSets)
 importFrom(goalie,areSameLength)
+importFrom(goalie,areSetEqual)
 importFrom(goalie,assert)
 importFrom(goalie,bapply)
 importFrom(goalie,hasColnames)
