--- a/NAMESPACE
+++ b/NAMESPACE
@@ -140,6 +140,7 @@ importFrom(goalie,isFile)
 importFrom(goalie,isFlag)
 importFrom(goalie,isHeaderLevel)
 importFrom(goalie,isInt)
+importFrom(goalie,isNonNegative)
 importFrom(goalie,isNumber)
 importFrom(goalie,isScalar)
 importFrom(goalie,isScalarInteger)
