--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,7 +1,6 @@
 pandoc: 2.7.3
 pkgdown: 1.5.1
 pkgdown_sha: ~
-articles:
-  acidgsea: acidgsea.html
-last_built: 2020-07-23T21:51Z
+articles: []
+last_built: 2020-08-05T16:51Z
 
