--- a/NAMESPACE
+++ b/NAMESPACE
@@ -120,6 +120,7 @@ importFrom(ggplot2,geom_segment)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,labs)
 importFrom(goalie,allAreAtomic)
+importFrom(goalie,allAreFiles)
 importFrom(goalie,areDisjointSets)
 importFrom(goalie,areSameLength)
 importFrom(goalie,areSetEqual)
