Export geneSet generic

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(contrastNames)
 export(convertToHuman)
 export(enrichedGeneSets)
 export(export)
+export(geneSet)
 export(nesThreshold)
 export(pfgsea)
 export(plotEnrichedGeneSets)
@@ -39,6 +40,7 @@ exportMethods(contrastNames)
 exportMethods(convertToHuman)
 exportMethods(enrichedGeneSets)
 exportMethods(export)
+exportMethods(geneSet)
 exportMethods(nesThreshold)
 exportMethods(plotEnrichedGeneSets)
 exportMethods(plotEnrichedUpset)
