Export leadingEdge function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(convertToHuman)
 export(enrichedGeneSets)
 export(export)
 export(geneSet)
+export(leadingEdge)
 export(nesThreshold)
 export(pfgsea)
 export(plotEnrichedGeneSets)
@@ -41,6 +42,7 @@ exportMethods(convertToHuman)
 exportMethods(enrichedGeneSets)
 exportMethods(export)
 exportMethods(geneSet)
+exportMethods(leadingEdge)
 exportMethods(nesThreshold)
 exportMethods(plotEnrichedGeneSets)
 exportMethods(plotEnrichedUpset)
