--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(convertToHuman)
 export(enrichedGeneSets)
 export(export)
 export(geneSet)
+export(geneSetResults)
 export(leadingEdge)
 export(nesThreshold)
 export(pfgsea)
@@ -24,6 +25,7 @@ export(plotEnrichment)
 export(plotGSEATable)
 export(plotGeneSet)
 export(plotHeatmap)
+export(results)
 export(topTables)
 export(updateObject)
 exportClasses(FGSEAList)
@@ -88,6 +90,7 @@ importFrom(acidgenerics,export)
 importFrom(acidgenerics,plotEnrichedGeneSets)
 importFrom(acidgenerics,plotEnrichedUpset)
 importFrom(acidgenerics,plotHeatmap)
+importFrom(acidgenerics,results)
 importFrom(acidgenerics,topTables)
 importFrom(acidplots,acid_theme_light)
 importFrom(acidplots,plotUpset)
