--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,12 +44,14 @@ exportMethods(convertToHuman)
 exportMethods(enrichedGeneSets)
 exportMethods(export)
 exportMethods(geneSet)
+exportMethods(geneSetResults)
 exportMethods(leadingEdge)
 exportMethods(nesThreshold)
 exportMethods(plotEnrichedGeneSets)
 exportMethods(plotEnrichedUpset)
 exportMethods(plotGeneSet)
 exportMethods(plotHeatmap)
+exportMethods(results)
 exportMethods(show)
 exportMethods(topTables)
 exportMethods(updateObject)
@@ -82,13 +84,20 @@ importFrom(SummarizedExperiment,rowRanges)
 importFrom(acidgenerics,"alphaThreshold<-")
 importFrom(acidgenerics,"collectionNames<-")
 importFrom(acidgenerics,"contrastNames<-")
+importFrom(acidgenerics,"nesThreshold<-")
 importFrom(acidgenerics,alphaThreshold)
 importFrom(acidgenerics,collectionNames)
 importFrom(acidgenerics,contrastNames)
+importFrom(acidgenerics,convertToHuman)
 importFrom(acidgenerics,enrichedGeneSets)
 importFrom(acidgenerics,export)
+importFrom(acidgenerics,geneSet)
+importFrom(acidgenerics,geneSetResults)
+importFrom(acidgenerics,leadingEdge)
+importFrom(acidgenerics,nesThreshold)
 importFrom(acidgenerics,plotEnrichedGeneSets)
 importFrom(acidgenerics,plotEnrichedUpset)
+importFrom(acidgenerics,plotGeneSet)
 importFrom(acidgenerics,plotHeatmap)
 importFrom(acidgenerics,results)
 importFrom(acidgenerics,topTables)
