Add plotNES generic

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(plotEnrichment)
 export(plotGSEATable)
 export(plotGeneSet)
 export(plotHeatmap)
+export(plotNES)
 export(results)
 export(topTables)
 export(updateObject)
@@ -51,6 +52,7 @@ exportMethods(plotEnrichedGeneSets)
 exportMethods(plotEnrichedUpset)
 exportMethods(plotGeneSet)
 exportMethods(plotHeatmap)
+exportMethods(plotNES)
 exportMethods(results)
 exportMethods(show)
 exportMethods(topTables)
@@ -81,6 +83,7 @@ importFrom(S4Vectors,tail)
 importFrom(S4Vectors,unique)
 importFrom(SummarizedExperiment,"rowRanges<-")
 importFrom(SummarizedExperiment,rowRanges)
+importFrom(acidbase,formalsList)
 importFrom(acidgenerics,"alphaThreshold<-")
 importFrom(acidgenerics,"collectionNames<-")
 importFrom(acidgenerics,"contrastNames<-")
@@ -128,6 +131,8 @@ importFrom(cli,cli_ul)
 importFrom(fgsea,calcGseaStat)
 importFrom(fgsea,fgsea)
 importFrom(ggplot2,aes)
+importFrom(ggplot2,coord_flip)
+importFrom(ggplot2,geom_col)
 importFrom(ggplot2,geom_hline)
 importFrom(ggplot2,geom_line)
 importFrom(ggplot2,geom_point)
@@ -174,6 +179,8 @@ importFrom(methods,setValidity)
 importFrom(methods,show)
 importFrom(methods,slot)
 importFrom(methods,validObject)
+importFrom(rlang,"!!")
+importFrom(rlang,sym)
 importFrom(sessioninfo,session_info)
 importFrom(utils,globalVariables)
 importMethodsFrom(DESeqAnalysis,coerce)
