Work toward preparing a release

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(plotEnrichment)
 export(plotGSEATable)
 export(plotGeneSet)
 export(plotHeatmap)
+export(plotLFC)
 export(plotNES)
 export(results)
 export(topTables)
@@ -52,6 +53,7 @@ exportMethods(plotEnrichedGeneSets)
 exportMethods(plotEnrichedUpset)
 exportMethods(plotGeneSet)
 exportMethods(plotHeatmap)
+exportMethods(plotLFC)
 exportMethods(plotNES)
 exportMethods(results)
 exportMethods(show)
@@ -132,11 +134,14 @@ importFrom(fgsea,calcGseaStat)
 importFrom(fgsea,fgsea)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,coord_flip)
+importFrom(ggplot2,geom_boxplot)
 importFrom(ggplot2,geom_col)
 importFrom(ggplot2,geom_hline)
+importFrom(ggplot2,geom_jitter)
 importFrom(ggplot2,geom_line)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_segment)
+importFrom(ggplot2,geom_violin)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,labs)
 importFrom(goalie,allAreAtomic)
@@ -159,6 +164,7 @@ importFrom(goalie,isAny)
 importFrom(goalie,isCharacter)
 importFrom(goalie,isFile)
 importFrom(goalie,isFlag)
+importFrom(goalie,isGGScale)
 importFrom(goalie,isHeaderLevel)
 importFrom(goalie,isInt)
 importFrom(goalie,isNonNegative)
