--- a/NAMESPACE
+++ b/NAMESPACE
@@ -111,6 +111,7 @@ importFrom(acidplots,plotUpset)
 importFrom(basejump,Gene2Symbol)
 importFrom(basejump,aggregateRows)
 importFrom(basejump,as_tibble)
+importFrom(basejump,camelCase)
 importFrom(basejump,export)
 importFrom(basejump,import)
 importFrom(basejump,initDir)
@@ -120,6 +121,7 @@ importFrom(basejump,mapGenesToRownames)
 importFrom(basejump,markdownHeader)
 importFrom(basejump,matchArgsToDoCall)
 importFrom(basejump,matchHumanOrthologs)
+importFrom(basejump,melt)
 importFrom(basejump,selectIf)
 importFrom(basejump,showHeader)
 importFrom(basejump,showSlotInfo)
@@ -188,6 +190,7 @@ importFrom(methods,validObject)
 importFrom(rlang,"!!")
 importFrom(rlang,sym)
 importFrom(sessioninfo,session_info)
+importFrom(stats,reorder)
 importFrom(utils,globalVariables)
 importMethodsFrom(DESeqAnalysis,coerce)
 importMethodsFrom(DESeqAnalysis,plotCounts)
