--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Title: Acid Genomics GSEA
 Description: Perform parameterized gene set enrichment analysis (GSEA)
     on multiple differential expression contrasts.
 Version: 0.4.0
-Date: 2020-09-22
+Date: 2020-09-23
 Authors@R: c(
     person(
         "Michael", "Steinbaugh",
@@ -43,6 +43,7 @@ Imports:
     methods,
     rlang (>= 0.4),
     sessioninfo (>= 1.1),
+    stats,
     utils
 Suggests:
     BiocStyle,
