Add Gene2Symbol return method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export("collectionNames<-")
 export("contrastNames<-")
 export("nesThreshold<-")
 export(FGSEAList)
+export(Gene2Symbol)
 export(RankedList)
 export(acidgseaTestsURL)
 export(alphaThreshold)
@@ -37,6 +38,7 @@ exportMethods("collectionNames<-")
 exportMethods("contrastNames<-")
 exportMethods("nesThreshold<-")
 exportMethods(FGSEAList)
+exportMethods(Gene2Symbol)
 exportMethods(RankedList)
 exportMethods(alphaThreshold)
 exportMethods(collectionNames)
