Add geneSetNames generic

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(convertToHuman)
 export(enrichedGeneSets)
 export(export)
 export(geneSet)
+export(geneSetNames)
 export(geneSetResults)
 export(leadingEdge)
 export(nesThreshold)
@@ -48,6 +49,7 @@ exportMethods(convertToHuman)
 exportMethods(enrichedGeneSets)
 exportMethods(export)
 exportMethods(geneSet)
+exportMethods(geneSetNames)
 exportMethods(geneSetResults)
 exportMethods(leadingEdge)
 exportMethods(nesThreshold)
