Improved FGSEAList generator

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -64,3 +64,39 @@ biocViews:
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 VignetteBuilder: knitr
+Collate: 
+    'AllClasses.R'
+    'AllGenerics.R'
+    'AllGlobals.R'
+    'DESeqAnalysis-methods.R'
+    'RankedList-methods.R'
+    'FGSEAList-methods.R'
+    'Gene2Symbol-methods.R'
+    'alphaThreshold-methods.R'
+    'collectionNames-methods.R'
+    'combine-methods.R'
+    'contrastNames-methods.R'
+    'convertToHuman-methods.R'
+    'data.R'
+    'deprecated.R'
+    'enrichedGeneSets-methods.R'
+    'export-methods.R'
+    'geneSet-methods.R'
+    'geneSetNames-methods.R'
+    'geneSetResults-methods.R'
+    'imports.R'
+    'internal.R'
+    'leadingEdge-methods.R'
+    'nesThreshold-methods.R'
+    'package.R'
+    'params.R'
+    'plotEnrichedGeneSets-methods.R'
+    'plotEnrichedUpset-methods.R'
+    'plotGeneSet-methods.R'
+    'plotHeatmap-methods.R'
+    'plotLFC-methods.R'
+    'plotNES-methods.R'
+    'results-methods.R'
+    'show-methods.R'
+    'topTables-methods.R'
+    'updateObject-methods.R'
