Migrate to acidgenerics generic

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -101,6 +101,7 @@ importFrom(acidgenerics,convertToHuman)
 importFrom(acidgenerics,enrichedGeneSets)
 importFrom(acidgenerics,export)
 importFrom(acidgenerics,geneSet)
+importFrom(acidgenerics,geneSetNames)
 importFrom(acidgenerics,geneSetResults)
 importFrom(acidgenerics,leadingEdge)
 importFrom(acidgenerics,nesThreshold)
@@ -108,6 +109,8 @@ importFrom(acidgenerics,plotEnrichedGeneSets)
 importFrom(acidgenerics,plotEnrichedUpset)
 importFrom(acidgenerics,plotGeneSet)
 importFrom(acidgenerics,plotHeatmap)
+importFrom(acidgenerics,plotLFC)
+importFrom(acidgenerics,plotNES)
 importFrom(acidgenerics,results)
 importFrom(acidgenerics,topTables)
 importFrom(acidplots,acid_theme_light)
