--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
-Package: acidgsea
+Package: AcidGSEA
 Title: Acid Genomics GSEA
 Description: Perform parameterized gene set enrichment analysis (GSEA)
     on multiple differential expression contrasts.
 Version: 0.4.1
-Date: 2020-10-01
+Date: 2020-10-10
 Authors@R: c(
     person(
         "Michael", "Steinbaugh",
@@ -24,21 +24,21 @@ Encoding: UTF-8
 LazyData: false
 Depends:
     R (>= 4.0),
-    basejump (>= 0.12.15),
-    DESeqAnalysis (>= 0.3.8)
+    basejump (>= 0.13.2),
+    DESeqAnalysis (>= 0.3.9)
 Imports:
+    AcidBase (>= 0.2.3),
+    AcidGenerics (>= 0.4.0),
+    AcidPlots (>= 0.3.0),
     BiocGenerics,
     BiocParallel,
     IRanges,
     S4Vectors,
     SummarizedExperiment,
-    acidbase (>= 0.1.14),
-    acidgenerics (>= 0.3.13),
-    acidplots (>= 0.2.35),
     cli (>= 2.0),
     fgsea (>= 1.14),
     ggplot2 (>= 3.3),
-    goalie (>= 0.4.8),
+    goalie (>= 0.4.9),
     knitr (>= 1.25),
     methods,
     rlang (>= 0.4),
@@ -46,8 +46,8 @@ Imports:
     stats,
     utils
 Suggests:
+    AcidTest (>= 0.4.0),
     BiocStyle,
-    acidtest (>= 0.3.2),
     rmarkdown,
     testthat
 biocViews:
