--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,10 +4,10 @@ export("alphaThreshold<-")
 export("collectionNames<-")
 export("contrastNames<-")
 export("nesThreshold<-")
+export(AcidGSEATestsURL)
 export(FGSEAList)
 export(Gene2Symbol)
 export(RankedList)
-export(acidgseaTestsURL)
 export(alphaThreshold)
 export(collectionNames)
 export(combine)
