--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -2,6 +2,6 @@ pandoc: 2.7.3
 pkgdown: 1.6.1
 pkgdown_sha: ~
 articles:
-  acidgsea: acidgsea.html
-last_built: 2020-10-10T15:51Z
+  AcidGSEA: AcidGSEA.html
+last_built: 2020-10-11T12:44Z
 
