--- a/NAMESPACE
+++ b/NAMESPACE
@@ -71,6 +71,7 @@ importFrom(AcidGenerics,"contrastNames<-")
 importFrom(AcidGenerics,"nesThreshold<-")
 importFrom(AcidGenerics,alphaThreshold)
 importFrom(AcidGenerics,collectionNames)
+importFrom(AcidGenerics,combine)
 importFrom(AcidGenerics,contrastNames)
 importFrom(AcidGenerics,convertToHuman)
 importFrom(AcidGenerics,enrichedGeneSets)
@@ -88,10 +89,9 @@ importFrom(AcidGenerics,plotLFC)
 importFrom(AcidGenerics,plotNES)
 importFrom(AcidGenerics,results)
 importFrom(AcidGenerics,topTables)
+importFrom(AcidGenerics,updateObject)
 importFrom(AcidPlots,acid_theme_light)
 importFrom(AcidPlots,plotUpset)
-importFrom(BiocGenerics,combine)
-importFrom(BiocGenerics,updateObject)
 importFrom(BiocParallel,bplapply)
 importFrom(BiocParallel,bpparam)
 importFrom(DESeqAnalysis,DESeqAnalysis)
