--- a/NAMESPACE
+++ b/NAMESPACE
@@ -117,8 +117,12 @@ importFrom(SummarizedExperiment,"rowRanges<-")
 importFrom(SummarizedExperiment,rowRanges)
 importFrom(basejump,Gene2Symbol)
 importFrom(basejump,aggregateRows)
+importFrom(basejump,alert)
+importFrom(basejump,alertInfo)
+importFrom(basejump,alertWarning)
 importFrom(basejump,as_tibble)
 importFrom(basejump,camelCase)
+importFrom(basejump,dl)
 importFrom(basejump,export)
 importFrom(basejump,import)
 importFrom(basejump,initDir)
@@ -133,12 +137,8 @@ importFrom(basejump,selectIf)
 importFrom(basejump,showHeader)
 importFrom(basejump,showSlotInfo)
 importFrom(basejump,standardizeCall)
-importFrom(cli,cli_alert)
-importFrom(cli,cli_alert_info)
-importFrom(cli,cli_alert_warning)
-importFrom(cli,cli_dl)
-importFrom(cli,cli_text)
-importFrom(cli,cli_ul)
+importFrom(basejump,txt)
+importFrom(basejump,ul)
 importFrom(fgsea,calcGseaStat)
 importFrom(fgsea,fgsea)
 importFrom(ggplot2,aes)
