--- a/NAMESPACE
+++ b/NAMESPACE
@@ -64,7 +64,6 @@ exportMethods(show)
 exportMethods(topTables)
 exportMethods(updateObject)
 importClassesFrom(DESeqAnalysis,DESeqAnalysis)
-importFrom(AcidBase,formalsList)
 importFrom(AcidGenerics,"alphaThreshold<-")
 importFrom(AcidGenerics,"collectionNames<-")
 importFrom(AcidGenerics,"contrastNames<-")
@@ -124,6 +123,7 @@ importFrom(basejump,as_tibble)
 importFrom(basejump,camelCase)
 importFrom(basejump,dl)
 importFrom(basejump,export)
+importFrom(basejump,formalsList)
 importFrom(basejump,import)
 importFrom(basejump,initDir)
 importFrom(basejump,leftJoin)
