Work on simplifying NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -133,7 +133,12 @@ importFrom(basejump,markdownHeader)
 importFrom(basejump,matchArgsToDoCall)
 importFrom(basejump,matchHumanOrthologs)
 importFrom(basejump,melt)
+importFrom(basejump,packageName)
+importFrom(basejump,packageVersion)
+importFrom(basejump,reorder)
+importFrom(basejump,requireNamespaces)
 importFrom(basejump,selectIf)
+importFrom(basejump,session_info)
 importFrom(basejump,showHeader)
 importFrom(basejump,showSlotInfo)
 importFrom(basejump,standardizeCall)
@@ -182,7 +187,6 @@ importFrom(goalie,isScalarInteger)
 importFrom(goalie,isString)
 importFrom(goalie,isSubset)
 importFrom(goalie,validate)
-importFrom(knitr,kable)
 importFrom(methods,"slot<-")
 importFrom(methods,as)
 importFrom(methods,is)
@@ -196,9 +200,5 @@ importFrom(methods,slot)
 importFrom(methods,validObject)
 importFrom(rlang,"!!")
 importFrom(rlang,sym)
-importFrom(sessioninfo,session_info)
-importFrom(stats,reorder)
-importFrom(utils,packageName)
-importFrom(utils,packageVersion)
 importMethodsFrom(DESeqAnalysis,coerce)
 importMethodsFrom(DESeqAnalysis,plotCounts)
