--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,14 +35,10 @@ Imports:
     fgsea (>= 1.16),
     ggplot2 (>= 3.3),
     goalie (>= 0.4.9),
-    knitr (>= 1.25),
-    methods,
-    rlang (>= 0.4),
-    sessioninfo (>= 1.1),
-    stats,
-    utils
+    methods
 Suggests:
     AcidTest (>= 0.4.0),
+    knitr,
     rmarkdown,
     testthat
 biocViews:
@@ -51,5 +47,4 @@ biocViews:
     Visualization
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
-VignetteBuilder: knitr
 Additional_repositories: https://r.acidgenomics.com
