--- a/NAMESPACE
+++ b/NAMESPACE
@@ -96,54 +96,53 @@ importFrom(BiocParallel,bpparam)
 importFrom(DESeqAnalysis,DESeqAnalysis)
 importFrom(DESeqAnalysis,contrastName)
 importFrom(DESeqAnalysis,contrastSamples)
-importFrom(IRanges,SplitDataFrameList)
-importFrom(IRanges,unsplit)
-importFrom(S4Vectors,"mcols<-")
-importFrom(S4Vectors,"metadata<-")
-importFrom(S4Vectors,DataFrame)
-importFrom(S4Vectors,SimpleList)
-importFrom(S4Vectors,complete.cases)
-importFrom(S4Vectors,head)
-importFrom(S4Vectors,lapply)
-importFrom(S4Vectors,mcols)
-importFrom(S4Vectors,metadata)
-importFrom(S4Vectors,na.omit)
-importFrom(S4Vectors,order)
-importFrom(S4Vectors,split)
-importFrom(S4Vectors,tail)
-importFrom(S4Vectors,unique)
-importFrom(SummarizedExperiment,"rowRanges<-")
-importFrom(SummarizedExperiment,rowRanges)
+importFrom(basejump,"mcols<-")
+importFrom(basejump,"metadata<-")
+importFrom(basejump,"rowRanges<-")
+importFrom(basejump,DataFrame)
 importFrom(basejump,Gene2Symbol)
+importFrom(basejump,SimpleList)
+importFrom(basejump,SplitDataFrameList)
 importFrom(basejump,aggregateRows)
 importFrom(basejump,alert)
 importFrom(basejump,alertInfo)
 importFrom(basejump,alertWarning)
 importFrom(basejump,as_tibble)
 importFrom(basejump,camelCase)
+importFrom(basejump,complete.cases)
 importFrom(basejump,dl)
 importFrom(basejump,export)
 importFrom(basejump,formalsList)
+importFrom(basejump,head)
 importFrom(basejump,import)
 importFrom(basejump,initDir)
+importFrom(basejump,lapply)
 importFrom(basejump,leftJoin)
 importFrom(basejump,makeNames)
 importFrom(basejump,mapGenesToRownames)
 importFrom(basejump,markdownHeader)
-importFrom(basejump,matchArgsToDoCall)
 importFrom(basejump,matchHumanOrthologs)
+importFrom(basejump,mcols)
 importFrom(basejump,melt)
+importFrom(basejump,metadata)
+importFrom(basejump,na.omit)
+importFrom(basejump,order)
 importFrom(basejump,packageName)
 importFrom(basejump,packageVersion)
 importFrom(basejump,reorder)
 importFrom(basejump,requireNamespaces)
+importFrom(basejump,rowRanges)
 importFrom(basejump,selectIf)
 importFrom(basejump,session_info)
 importFrom(basejump,showHeader)
 importFrom(basejump,showSlotInfo)
+importFrom(basejump,split)
 importFrom(basejump,standardizeCall)
+importFrom(basejump,tail)
 importFrom(basejump,txt)
 importFrom(basejump,ul)
+importFrom(basejump,unique)
+importFrom(basejump,unsplit)
 importFrom(fgsea,calcGseaStat)
 importFrom(fgsea,fgsea)
 importFrom(ggplot2,aes)
