--- a/NAMESPACE
+++ b/NAMESPACE
@@ -87,8 +87,10 @@ importFrom(AcidGenerics,plotLFC)
 importFrom(AcidGenerics,plotNES)
 importFrom(AcidGenerics,results)
 importFrom(AcidGenerics,topTables)
+importFrom(AcidPlots,"!!")
 importFrom(AcidPlots,acid_theme_light)
 importFrom(AcidPlots,plotUpset)
+importFrom(AcidPlots,sym)
 importFrom(BiocGenerics,combine)
 importFrom(BiocGenerics,updateObject)
 importFrom(BiocParallel,bplapply)
@@ -197,7 +199,5 @@ importFrom(methods,setValidity)
 importFrom(methods,show)
 importFrom(methods,slot)
 importFrom(methods,validObject)
-importFrom(rlang,"!!")
-importFrom(rlang,sym)
 importMethodsFrom(DESeqAnalysis,coerce)
 importMethodsFrom(DESeqAnalysis,plotCounts)
