--- a/NAMESPACE
+++ b/NAMESPACE
@@ -181,6 +181,7 @@ importFrom(goalie,isFile)
 importFrom(goalie,isFlag)
 importFrom(goalie,isGGScale)
 importFrom(goalie,isHeaderLevel)
+importFrom(goalie,isInstalled)
 importFrom(goalie,isInt)
 importFrom(goalie,isNonNegative)
 importFrom(goalie,isNumber)
