--- a/NAMESPACE
+++ b/NAMESPACE
@@ -70,6 +70,7 @@ importFrom(AcidGenerics,"contrastNames<-")
 importFrom(AcidGenerics,"nesThreshold<-")
 importFrom(AcidGenerics,alphaThreshold)
 importFrom(AcidGenerics,collectionNames)
+importFrom(AcidGenerics,combine)
 importFrom(AcidGenerics,contrastNames)
 importFrom(AcidGenerics,convertToHuman)
 importFrom(AcidGenerics,enrichedGeneSets)
@@ -87,12 +88,11 @@ importFrom(AcidGenerics,plotLFC)
 importFrom(AcidGenerics,plotNES)
 importFrom(AcidGenerics,results)
 importFrom(AcidGenerics,topTables)
+importFrom(AcidGenerics,updateObject)
 importFrom(AcidPlots,"!!")
 importFrom(AcidPlots,acid_theme_light)
 importFrom(AcidPlots,plotUpset)
 importFrom(AcidPlots,sym)
-importFrom(BiocGenerics,combine)
-importFrom(BiocGenerics,updateObject)
 importFrom(DESeqAnalysis,DESeqAnalysis)
 importFrom(DESeqAnalysis,contrastName)
 importFrom(DESeqAnalysis,contrastSamples)
