--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,7 +19,7 @@ URL:
     https://acidgsea.acidgenomics.com/,
     https://github.com/acidgenomics/AcidGSEA/
 BugReports: https://github.com/acidgenomics/AcidGSEA/issues/
-License: GPL-3
+License: AGPL-3
 Encoding: UTF-8
 LazyData: false
 Depends: R (>= 4.0)
