Work toward updating `convertToHuman` function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -120,8 +120,8 @@ importFrom(basejump,lapply)
 importFrom(basejump,leftJoin)
 importFrom(basejump,makeNames)
 importFrom(basejump,mapGenesToRownames)
+importFrom(basejump,mapHumanOrthologs)
 importFrom(basejump,markdownHeader)
-importFrom(basejump,matchHumanOrthologs)
 importFrom(basejump,mcols)
 importFrom(basejump,melt)
 importFrom(basejump,metadata)
