Work toward new release

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ export(plotGeneSet)
 export(plotHeatmap)
 export(plotLFC)
 export(plotNES)
+export(prepareGeneSetFiles)
 export(results)
 export(topTables)
 export(updateObject)
