--- a/NAMESPACE
+++ b/NAMESPACE
@@ -130,6 +130,7 @@ importFrom(basejump,na.omit)
 importFrom(basejump,order)
 importFrom(basejump,packageName)
 importFrom(basejump,packageVersion)
+importFrom(basejump,realpath)
 importFrom(basejump,reorder)
 importFrom(basejump,requireNamespaces)
 importFrom(basejump,rowRanges)
