Add preliminary support for Entrez mode

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -102,6 +102,7 @@ importFrom(basejump,"metadata<-")
 importFrom(basejump,"rowRanges<-")
 importFrom(basejump,DataFrame)
 importFrom(basejump,Gene2Symbol)
+importFrom(basejump,IntegerList)
 importFrom(basejump,SimpleList)
 importFrom(basejump,SplitDataFrameList)
 importFrom(basejump,aggregateRows)
@@ -144,6 +145,7 @@ importFrom(basejump,tail)
 importFrom(basejump,txt)
 importFrom(basejump,ul)
 importFrom(basejump,unique)
+importFrom(basejump,unlist)
 importFrom(basejump,unsplit)
 importFrom(fgsea,calcGseaStat)
 importFrom(fgsea,fgsea)
