--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,8 @@ Package: AcidGSEA
 Title: Acid Genomics GSEA
 Description: Perform parameterized gene set enrichment analysis (GSEA)
     on multiple differential expression contrasts.
-Version: 0.6.2
-Date: 2021-03-16
+Version: 0.6.2.9000
+Date: 2021-06-22
 Authors@R: c(
     person(
         "Michael", "Steinbaugh",
@@ -24,18 +24,18 @@ Encoding: UTF-8
 LazyData: false
 Depends:
     R (>= 4.0),
-    basejump (>= 0.14.16)
+    basejump (>= 0.14.19)
 Imports:
-    AcidGenerics (>= 0.5.17),
-    AcidPlots (>= 0.3.5),
+    AcidGenerics (>= 0.5.18),
+    AcidPlots (>= 0.3.6),
     DESeqAnalysis (>= 0.4.0),
     fgsea (>= 1.16),
-    ggplot2 (>= 3.3),
+    ggplot2 (>= 3.3.4),
     goalie (>= 0.5.1),
     methods
 Suggests:
     AcidTest (>= 0.4.3),
-    BiocParallel,
+    BiocParallel (>= 1.26),
     knitr,
     rmarkdown,
     testthat
