--- a/NAMESPACE
+++ b/NAMESPACE
@@ -102,6 +102,7 @@ importFrom(basejump,Gene2Symbol)
 importFrom(basejump,IntegerList)
 importFrom(basejump,SimpleList)
 importFrom(basejump,SplitDataFrameList)
+importFrom(basejump,abort)
 importFrom(basejump,aggregateRows)
 importFrom(basejump,alert)
 importFrom(basejump,alertInfo)
