--- a/NAMESPACE
+++ b/NAMESPACE
@@ -140,6 +140,7 @@ importFrom(basejump,showSlotInfo)
 importFrom(basejump,split)
 importFrom(basejump,standardizeCall)
 importFrom(basejump,tail)
+importFrom(basejump,toInlineString)
 importFrom(basejump,txt)
 importFrom(basejump,ul)
 importFrom(basejump,unique)
