Improve color handling in plots

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -89,6 +89,9 @@ importFrom(AcidGenerics,topTables)
 importFrom(AcidGenerics,updateObject)
 importFrom(AcidPlots,"!!")
 importFrom(AcidPlots,acid_theme_light)
+importFrom(AcidPlots,autoDiscreteColorScale)
+importFrom(AcidPlots,autoDiscreteFillScale)
+importFrom(AcidPlots,matchLabels)
 importFrom(AcidPlots,plotUpset)
 importFrom(AcidPlots,sym)
 importFrom(DESeqAnalysis,DESeqAnalysis)
@@ -179,7 +182,6 @@ importFrom(goalie,isAny)
 importFrom(goalie,isCharacter)
 importFrom(goalie,isFile)
 importFrom(goalie,isFlag)
-importFrom(goalie,isGGScale)
 importFrom(goalie,isHeaderLevel)
 importFrom(goalie,isInstalled)
 importFrom(goalie,isInt)
