Improve export method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -126,6 +126,7 @@ importFrom(basejump,markdownHeader)
 importFrom(basejump,mcols)
 importFrom(basejump,melt)
 importFrom(basejump,metadata)
+importFrom(basejump,methodFunction)
 importFrom(basejump,na.omit)
 importFrom(basejump,order)
 importFrom(basejump,packageName)
