Rework convertToHuman to support changes in EnsemblGenes GenomicRanges metadata formatting

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -187,6 +187,7 @@ importFrom(goalie,isInstalled)
 importFrom(goalie,isInt)
 importFrom(goalie,isNonNegative)
 importFrom(goalie,isNumber)
+importFrom(goalie,isOrganism)
 importFrom(goalie,isScalarInteger)
 importFrom(goalie,isString)
 importFrom(goalie,isSubset)
