Allow the user to select which contrasts to plot

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -162,6 +162,8 @@ importFrom(ggplot2,geom_segment)
 importFrom(ggplot2,geom_violin)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,labs)
+importFrom(ggplot2,scale_alpha_identity)
+importFrom(ggplot2,scale_shape_manual)
 importFrom(goalie,allAreAtomic)
 importFrom(goalie,allAreFiles)
 importFrom(goalie,areDisjointSets)
@@ -188,6 +190,7 @@ importFrom(goalie,isInt)
 importFrom(goalie,isNonNegative)
 importFrom(goalie,isNumber)
 importFrom(goalie,isOrganism)
+importFrom(goalie,isScalar)
 importFrom(goalie,isScalarInteger)
 importFrom(goalie,isString)
 importFrom(goalie,isSubset)
