Rework RankedList and FGSEAList creation workflow

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -177,6 +177,7 @@ importFrom(goalie,hasNames)
 importFrom(goalie,hasNoDuplicates)
 importFrom(goalie,hasRownames)
 importFrom(goalie,hasRows)
+importFrom(goalie,isADir)
 importFrom(goalie,isAFile)
 importFrom(goalie,isAll)
 importFrom(goalie,isAlpha)
