Work on tightening up our Entrez processing method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -109,6 +109,7 @@ importFrom(basejump,abort)
 importFrom(basejump,alert)
 importFrom(basejump,alertInfo)
 importFrom(basejump,alertWarning)
+importFrom(basejump,as.DataFrame)
 importFrom(basejump,as_tibble)
 importFrom(basejump,camelCase)
 importFrom(basejump,complete.cases)
@@ -166,6 +167,7 @@ importFrom(ggplot2,scale_alpha_identity)
 importFrom(ggplot2,scale_shape_manual)
 importFrom(goalie,allAreAtomic)
 importFrom(goalie,allAreFiles)
+importFrom(goalie,allAreMatchingRegex)
 importFrom(goalie,areDisjointSets)
 importFrom(goalie,areSameLength)
 importFrom(goalie,areSetEqual)
@@ -186,6 +188,7 @@ importFrom(goalie,isCharacter)
 importFrom(goalie,isFile)
 importFrom(goalie,isFlag)
 importFrom(goalie,isHeaderLevel)
+importFrom(goalie,isInRange)
 importFrom(goalie,isInstalled)
 importFrom(goalie,isInt)
 importFrom(goalie,isNonNegative)
