--- a/NAMESPACE
+++ b/NAMESPACE
@@ -62,21 +62,42 @@ exportMethods(show)
 exportMethods(topTables)
 exportMethods(updateObject)
 importClassesFrom(DESeqAnalysis,DESeqAnalysis)
+importFrom(AcidBase,initDir)
+importFrom(AcidBase,methodFunction)
+importFrom(AcidBase,realpath)
+importFrom(AcidBase,requireNamespaces)
+importFrom(AcidBase,showSlotInfo)
+importFrom(AcidBase,standardizeCall)
+importFrom(AcidCLI,abort)
+importFrom(AcidCLI,alert)
+importFrom(AcidCLI,alertInfo)
+importFrom(AcidCLI,alertWarning)
+importFrom(AcidCLI,dl)
+importFrom(AcidCLI,toInlineString)
+importFrom(AcidCLI,txt)
+importFrom(AcidCLI,ul)
 importFrom(AcidGenerics,"alphaThreshold<-")
 importFrom(AcidGenerics,"collectionNames<-")
 importFrom(AcidGenerics,"contrastNames<-")
 importFrom(AcidGenerics,"nesThreshold<-")
+importFrom(AcidGenerics,Gene2Symbol)
 importFrom(AcidGenerics,alphaThreshold)
+importFrom(AcidGenerics,as.DataFrame)
+importFrom(AcidGenerics,camelCase)
 importFrom(AcidGenerics,collectionNames)
-importFrom(AcidGenerics,combine)
+importFrom(AcidGenerics,contrastName)
 importFrom(AcidGenerics,contrastNames)
+importFrom(AcidGenerics,contrastSamples)
 importFrom(AcidGenerics,convertToHuman)
 importFrom(AcidGenerics,enrichedGeneSets)
-importFrom(AcidGenerics,export)
 importFrom(AcidGenerics,geneSet)
 importFrom(AcidGenerics,geneSetNames)
 importFrom(AcidGenerics,geneSetResults)
 importFrom(AcidGenerics,leadingEdge)
+importFrom(AcidGenerics,leftJoin)
+importFrom(AcidGenerics,makeNames)
+importFrom(AcidGenerics,mapGenesToRownames)
+importFrom(AcidGenerics,melt)
 importFrom(AcidGenerics,nesThreshold)
 importFrom(AcidGenerics,plotEnrichedGeneSets)
 importFrom(AcidGenerics,plotEnrichedUpset)
@@ -84,71 +105,42 @@ importFrom(AcidGenerics,plotGeneSet)
 importFrom(AcidGenerics,plotHeatmap)
 importFrom(AcidGenerics,plotLFC)
 importFrom(AcidGenerics,plotNES)
+importFrom(AcidGenerics,plotUpset)
 importFrom(AcidGenerics,results)
+importFrom(AcidGenerics,selectIf)
+importFrom(AcidGenerics,showHeader)
 importFrom(AcidGenerics,topTables)
-importFrom(AcidGenerics,updateObject)
+importFrom(AcidGenomes,mapHumanOrthologs)
+importFrom(AcidMarkdown,markdownHeader)
 importFrom(AcidPlots,"!!")
 importFrom(AcidPlots,acid_theme_light)
 importFrom(AcidPlots,autoDiscreteColorScale)
 importFrom(AcidPlots,autoDiscreteFillScale)
 importFrom(AcidPlots,matchLabels)
-importFrom(AcidPlots,plotUpset)
 importFrom(AcidPlots,sym)
+importFrom(BiocGenerics,combine)
+importFrom(BiocGenerics,lapply)
+importFrom(BiocGenerics,order)
+importFrom(BiocGenerics,unique)
+importFrom(BiocGenerics,unlist)
+importFrom(BiocGenerics,unsplit)
+importFrom(BiocGenerics,updateObject)
 importFrom(DESeqAnalysis,DESeqAnalysis)
-importFrom(DESeqAnalysis,contrastName)
-importFrom(DESeqAnalysis,contrastSamples)
-importFrom(basejump,"mcols<-")
-importFrom(basejump,"metadata<-")
-importFrom(basejump,"rowRanges<-")
-importFrom(basejump,DataFrame)
-importFrom(basejump,Gene2Symbol)
-importFrom(basejump,IntegerList)
-importFrom(basejump,SimpleList)
-importFrom(basejump,SplitDataFrameList)
-importFrom(basejump,abort)
-importFrom(basejump,alert)
-importFrom(basejump,alertInfo)
-importFrom(basejump,alertWarning)
-importFrom(basejump,as.DataFrame)
-importFrom(basejump,as_tibble)
-importFrom(basejump,camelCase)
-importFrom(basejump,complete.cases)
-importFrom(basejump,dl)
-importFrom(basejump,export)
-importFrom(basejump,head)
-importFrom(basejump,import)
-importFrom(basejump,initDir)
-importFrom(basejump,lapply)
-importFrom(basejump,leftJoin)
-importFrom(basejump,makeNames)
-importFrom(basejump,mapGenesToRownames)
-importFrom(basejump,mapHumanOrthologs)
-importFrom(basejump,markdownHeader)
-importFrom(basejump,mcols)
-importFrom(basejump,melt)
-importFrom(basejump,metadata)
-importFrom(basejump,methodFunction)
-importFrom(basejump,na.omit)
-importFrom(basejump,order)
-importFrom(basejump,packageName)
-importFrom(basejump,packageVersion)
-importFrom(basejump,realpath)
-importFrom(basejump,reorder)
-importFrom(basejump,requireNamespaces)
-importFrom(basejump,rowRanges)
-importFrom(basejump,selectIf)
-importFrom(basejump,session_info)
-importFrom(basejump,showHeader)
-importFrom(basejump,showSlotInfo)
-importFrom(basejump,split)
-importFrom(basejump,standardizeCall)
-importFrom(basejump,tail)
-importFrom(basejump,toInlineString)
-importFrom(basejump,txt)
-importFrom(basejump,ul)
-importFrom(basejump,unique)
-importFrom(basejump,unlist)
-importFrom(basejump,unsplit)
+importFrom(IRanges,IntegerList)
+importFrom(IRanges,SplitDataFrameList)
+importFrom(S4Vectors,"mcols<-")
+importFrom(S4Vectors,"metadata<-")
+importFrom(S4Vectors,DataFrame)
+importFrom(S4Vectors,SimpleList)
+importFrom(S4Vectors,complete.cases)
+importFrom(S4Vectors,head)
+importFrom(S4Vectors,mcols)
+importFrom(S4Vectors,metadata)
+importFrom(S4Vectors,na.omit)
+importFrom(S4Vectors,split)
+importFrom(S4Vectors,tail)
+importFrom(SummarizedExperiment,"rowRanges<-")
+importFrom(SummarizedExperiment,rowRanges)
 importFrom(fgsea,calcGseaStat)
 importFrom(fgsea,fgsea)
 importFrom(ggplot2,aes)
@@ -201,6 +193,7 @@ importFrom(goalie,isSubset)
 importFrom(goalie,validate)
 importFrom(methods,"slot<-")
 importFrom(methods,as)
+importFrom(methods,coerce)
 importFrom(methods,is)
 importFrom(methods,new)
 importFrom(methods,setAs)
@@ -210,5 +203,29 @@ importFrom(methods,setValidity)
 importFrom(methods,show)
 importFrom(methods,slot)
 importFrom(methods,validObject)
+importFrom(pipette,as_tibble)
+importFrom(pipette,export)
+importFrom(pipette,import)
+importFrom(sessioninfo,session_info)
+importFrom(stats,reorder)
+importFrom(utils,packageName)
+importFrom(utils,packageVersion)
+importMethodsFrom(AcidBase,showHeader)
+importMethodsFrom(AcidExperiment,Gene2Symbol)
+importMethodsFrom(AcidExperiment,export)
+importMethodsFrom(AcidExperiment,mapGenesToRownames)
+importMethodsFrom(AcidPlots,plotHeatmap)
+importMethodsFrom(AcidPlots,plotUpset)
+importMethodsFrom(AcidPlyr,leftJoin)
+importMethodsFrom(AcidPlyr,melt)
+importMethodsFrom(AcidPlyr,selectIf)
 importMethodsFrom(DESeqAnalysis,coerce)
+importMethodsFrom(DESeqAnalysis,contrastName)
+importMethodsFrom(DESeqAnalysis,contrastSamples)
 importMethodsFrom(DESeqAnalysis,plotCounts)
+importMethodsFrom(DESeqAnalysis,results)
+importMethodsFrom(pipette,as.DataFrame)
+importMethodsFrom(pipette,export)
+importMethodsFrom(pipette,import)
+importMethodsFrom(syntactic,camelCase)
+importMethodsFrom(syntactic,makeNames)
