--- a/NAMESPACE
+++ b/NAMESPACE
@@ -121,6 +121,7 @@ importFrom(AcidPlots,sym)
 importFrom(BiocGenerics,combine)
 importFrom(BiocGenerics,lapply)
 importFrom(BiocGenerics,order)
+importFrom(BiocGenerics,organism)
 importFrom(BiocGenerics,unique)
 importFrom(BiocGenerics,unlist)
 importFrom(BiocGenerics,unsplit)
