--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -46,6 +46,7 @@ Imports:
 Suggests:
     AcidTest (>= 0.5.0),
     BiocParallel,
+    basejump (>= 0.15.0),
     knitr,
     rmarkdown,
     testthat
