--- a/NAMESPACE
+++ b/NAMESPACE
@@ -118,6 +118,7 @@ importFrom(AcidPlots,autoDiscreteColorScale)
 importFrom(AcidPlots,autoDiscreteFillScale)
 importFrom(AcidPlots,matchLabels)
 importFrom(AcidPlots,sym)
+importFrom(BiocGenerics,"%in%")
 importFrom(BiocGenerics,combine)
 importFrom(BiocGenerics,lapply)
 importFrom(BiocGenerics,order)
@@ -127,6 +128,8 @@ importFrom(BiocGenerics,unlist)
 importFrom(BiocGenerics,unsplit)
 importFrom(BiocGenerics,updateObject)
 importFrom(DESeqAnalysis,DESeqAnalysis)
+importFrom(GenomeInfoDb,genome)
+importFrom(GenomeInfoDb,seqnames)
 importFrom(IRanges,IntegerList)
 importFrom(IRanges,SplitDataFrameList)
 importFrom(S4Vectors,"mcols<-")
@@ -184,6 +187,7 @@ importFrom(goalie,isHeaderLevel)
 importFrom(goalie,isInRange)
 importFrom(goalie,isInstalled)
 importFrom(goalie,isInt)
+importFrom(goalie,isMatchingRegex)
 importFrom(goalie,isNonNegative)
 importFrom(goalie,isNumber)
 importFrom(goalie,isOrganism)
