--- a/NAMESPACE
+++ b/NAMESPACE
@@ -62,6 +62,7 @@ exportMethods(show)
 exportMethods(topTables)
 exportMethods(updateObject)
 importClassesFrom(DESeqAnalysis,DESeqAnalysis)
+importFrom(AcidBase,basenameSansExt)
 importFrom(AcidBase,initDir)
 importFrom(AcidBase,methodFunction)
 importFrom(AcidBase,realpath)
