Improve GSEA return

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -166,6 +166,7 @@ importFrom(goalie,allAreAtomic)
 importFrom(goalie,allAreFiles)
 importFrom(goalie,allAreMatchingRegex)
 importFrom(goalie,areDisjointSets)
+importFrom(goalie,areIntersectingSets)
 importFrom(goalie,areSameLength)
 importFrom(goalie,areSetEqual)
 importFrom(goalie,assert)
