--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,11 +25,13 @@ LazyData: false
 Depends: R (>= 4.1)
 Imports:
     AcidBase (>= 0.5.0),
+    AcidCLI (>= 0.2.0),
     AcidExperiment (>= 0.3.0),
     AcidGenerics (>= 0.6.0),
     AcidGenomes (>= 0.3.0),
     AcidMarkdown (>= 0.1.6),
     AcidPlots (>= 0.4.0),
+    AcidPlyr (>= 0.2.0),
     BiocGenerics,
     DESeqAnalysis (>= 0.4.5),
     GenomeInfoDb,
@@ -40,8 +42,9 @@ Imports:
     ggplot2,
     goalie (>= 0.6.0),
     methods,
-    stats,
+    pipette (>= 0.8.1),
     sessioninfo,
+    stats,
     syntactic (>= 0.5.1),
     utils
 Suggests:
