--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -3,14 +3,15 @@ authors:
     href: https://steinbaugh.com/
   Acid Genomics:
     href: https://acidgenomics.com/
-
 navbar:
   components:
-     acid:
-       icon: "fas fa-vial fa-lg"
-       href: https://acidgenomics.com/
+    acid:
+      icon: 'fas fa-vial fa-lg'
+      href: https://acidgenomics.com/
   structure:
     right: [acid, github]
-
 news:
   - one_page: false
+template:
+  bootstrap: 5
+url: https://r.acidgenomics.com/packages/acidgsea
