--- a/NAMESPACE
+++ b/NAMESPACE
@@ -110,6 +110,7 @@ importFrom(AcidGenerics,plotUpset)
 importFrom(AcidGenerics,results)
 importFrom(AcidGenerics,selectIf)
 importFrom(AcidGenerics,showHeader)
+importFrom(AcidGenerics,snakeCase)
 importFrom(AcidGenerics,topTables)
 importFrom(AcidGenomes,mapHumanOrthologs)
 importFrom(AcidMarkdown,markdownHeader)
@@ -236,3 +237,4 @@ importMethodsFrom(pipette,export)
 importMethodsFrom(pipette,import)
 importMethodsFrom(syntactic,camelCase)
 importMethodsFrom(syntactic,makeNames)
+importMethodsFrom(syntactic,snakeCase)
