Rework our internal Gene2Symbol handling

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -83,6 +83,7 @@ importFrom(AcidGenerics,"contrastNames<-")
 importFrom(AcidGenerics,"nesThreshold<-")
 importFrom(AcidGenerics,Gene2Symbol)
 importFrom(AcidGenerics,alphaThreshold)
+importFrom(AcidGenerics,as.DESeqDataSet)
 importFrom(AcidGenerics,as.DataFrame)
 importFrom(AcidGenerics,camelCase)
 importFrom(AcidGenerics,collectionNames)
@@ -227,6 +228,7 @@ importMethodsFrom(AcidPlots,plotUpset)
 importMethodsFrom(AcidPlyr,leftJoin)
 importMethodsFrom(AcidPlyr,melt)
 importMethodsFrom(AcidPlyr,selectIf)
+importMethodsFrom(DESeqAnalysis,as.DESeqDataSet)
 importMethodsFrom(DESeqAnalysis,coerce)
 importMethodsFrom(DESeqAnalysis,contrastName)
 importMethodsFrom(DESeqAnalysis,contrastSamples)
