Update testthat and rework topTables as markdownTables

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(geneSet)
 export(geneSetNames)
 export(geneSetResults)
 export(leadingEdge)
+export(markdownTables)
 export(nesThreshold)
 export(plotEnrichedGeneSets)
 export(plotEnrichedUpset)
@@ -28,7 +29,6 @@ export(plotLFC)
 export(plotNES)
 export(prepareGeneSetFiles)
 export(results)
-export(topTables)
 export(updateObject)
 exportClasses(FGSEAList)
 exportClasses(RankedList)
@@ -50,6 +50,7 @@ exportMethods(geneSet)
 exportMethods(geneSetNames)
 exportMethods(geneSetResults)
 exportMethods(leadingEdge)
+exportMethods(markdownTables)
 exportMethods(nesThreshold)
 exportMethods(plotEnrichedGeneSets)
 exportMethods(plotEnrichedUpset)
@@ -59,7 +60,6 @@ exportMethods(plotLFC)
 exportMethods(plotNES)
 exportMethods(results)
 exportMethods(show)
-exportMethods(topTables)
 exportMethods(updateObject)
 importClassesFrom(DESeqAnalysis,DESeqAnalysis)
 importFrom(AcidBase,basenameSansExt)
@@ -99,6 +99,7 @@ importFrom(AcidGenerics,leadingEdge)
 importFrom(AcidGenerics,leftJoin)
 importFrom(AcidGenerics,makeNames)
 importFrom(AcidGenerics,mapGenesToRownames)
+importFrom(AcidGenerics,markdownTables)
 importFrom(AcidGenerics,melt)
 importFrom(AcidGenerics,nesThreshold)
 importFrom(AcidGenerics,plotEnrichedGeneSets)
@@ -112,7 +113,6 @@ importFrom(AcidGenerics,results)
 importFrom(AcidGenerics,selectIf)
 importFrom(AcidGenerics,showHeader)
 importFrom(AcidGenerics,snakeCase)
-importFrom(AcidGenerics,topTables)
 importFrom(AcidGenomes,mapHumanOrthologs)
 importFrom(AcidMarkdown,markdownHeader)
 importFrom(AcidPlots,"!!")
