--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,8 @@ Package: AcidGSEA
 Title: Acid Genomics GSEA
 Description: Perform parameterized gene set enrichment analysis (GSEA)
     on multiple differential expression contrasts.
-Version: 0.8.1.9000
-Date: 2022-05-11
+Version: 0.8.1
+Date: 2022-05-24
 Authors@R: c(
     person(
         "Michael", "Steinbaugh",
@@ -53,7 +53,8 @@ Suggests:
     basejump,
     knitr,
     rmarkdown,
-    testthat
-Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.2
+    testthat (>= 3.0.0)
 Additional_repositories: https://r.acidgenomics.com
+Config/testthat/edition: 3
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.2.0
